--- a/views/entries_all.ejs
+++ b/views/entries_all.ejs
@@ -4,22 +4,15 @@
   <meta charset="utf-8">
   <title>LeaderBoard_all</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
-
-<style>
-  table {
-    background-color: orange;
-    height: 50px;
-    width: 50px;
-  }
-</style>
 
 <body>
 
   <h1>All Scores</h1>
 
   <div class="score">
-    <table id="table" border='1'></table>
+    <table id="mainTable" border='1'></table>
   </div>
 
     <script src="/main.js"></script>
