--- a/views/entries_edit.ejs
+++ b/views/entries_edit.ejs
@@ -5,40 +5,40 @@
   <title>LeaderBoard_edit</title>
   <!-- <link rel="stylesheet" href="/style.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-  <h1>Entries Edit</h1>
+  <h1>Edit Entries</h1>
 
-  <div class="product">
-    <form method="POST" action="/products/<%= product.id %>?_method=PUT">
+  <div class="entries">
+
+    <form method="POST" action="/entries" id="edit-post">
 
       <div>
-        <!-- we're making our app so no one can change the id. -->
-        ID: <%= product.id %>
-      </div>
-      <div>
-        Rank: <input type="integer" name="Rank" value="<%= product.price %>">
-      </div>
-      <div>
-        Name: <input type="text" name="name" value="<%= product.name %>">
-      </div>
-      <div>
-        Score: <input type="integer" name="Score" value="<%= product.quantity %>">
-      </div>
-      <div>
-
+        Name <input type="text" name="name" value="" placeholder="Name">
       </div>
 
-      <button type="submit">save changes</button>
+      <div>
+        Score: <input type="number" name="score" value="" placeholder="Score">
+      </div>
+
+      <div>
+        Initial: <input type="text" name="initial" value="" placeholder="Initial">
+      </div>
+
+      <button type="submit">Save Changes</button>
+
+    </form> <!-- Edit Entries Form -->
+
+    <form method="POST" action="/entries" id="delete-post">
+      <div>
+        <button type="submit">Delete score</button>
+      </div>
     </form>
 
-    <form method="POST" action="/entries/<%= product.id %>?_method=DELETE">
-      <button type="submit">Delete score</button>
-    </form>
   </div>
-
   <p>
-    <a href="/products/<%= product.id %>"><< Back to leaderBoards</a>
+    <a href="/entries"><< Back to leaderBoards</a>
   </p>
 </body>
 </html>
