--- a/views/entries_new.ejs
+++ b/views/entries_new.ejs
@@ -5,6 +5,7 @@
     <title>LeaderBoard_new</title>
     <!-- <link rel="stylesheet" href="/style.css"> -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
   <body>
     <h1>Create a New Score</h1>
