--- a/views/entries_new.ejs
+++ b/views/entries_new.ejs
@@ -10,16 +10,16 @@
   <body>
     <h1>Create a New Score</h1>
 
-    <div class="product">
+    <div class="entryForm">
       <form action="/entries" method="POST">
-        <div>
-          Name <input type="text" name="name" value="">
+        <div class = inputDesign>
+          Name <input class = "inputBox" type="text" name="name" value="" placeholder="Steve Jobs">
         </div>
-        <div>
-          Score: <input type="number" name="score" value="">
+        <div class = inputDesign>
+          Score: <input class = "inputBox" type="number" name="score" value="" placeholder="110">
         </div>
-        <div>
-          Initial: <input type="text" name="initial" value="">
+        <div class = inputDesign>
+          Initial: <input class = "inputBox" type="text" name="initial" value="" placeholder="Apple">
         </div>
         <div>
 
